--- a/src/containers/BiggestPurchase/BiggestPurchase.module.css
+++ b/src/containers/BiggestPurchase/BiggestPurchase.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   height: auto;
-  background-color: #fff;
+  background-color: rgb(245, 245, 245);
   padding: 48px 16px;
 }
 
@@ -15,9 +15,22 @@
   text-align: center;
 }
 
+.BiggestPurchase p, .BiggestPurchase ul {
+  margin-top: 1.5em;
+  font-size: 1em;
+  text-align: center;
+}
+
+.BiggestPurchase ul {
+  list-style: none;
+}
+
 @media (min-width: 600px) {
   .BiggestPurchase font {
     font-size: 2rem;
-    line-height: 65px;
+    line-height: 45px;
+  }
+  .BiggestPurchase p, .BiggestPurchase ul {
+    font-size: 1.15em;
   }
 }
