--- a/src/containers/BiggestValues/BiggestValues.module.css
+++ b/src/containers/BiggestValues/BiggestValues.module.css
@@ -5,6 +5,7 @@
   height: auto;
   background-color: rgb(245, 245, 245);
   padding: 48px 16px;
+  margin-bottom: 3.2em;
 }
 
 .BiggestValues font {
@@ -18,6 +19,6 @@
 @media (min-width: 600px) {
   .BiggestValues font {
     font-size: 2rem;
-    line-height: 65px;
+    line-height: 45px;
   }
 }
